Revert "Actually fixed bug - Anchor points on smaller devices do not work as expected"
This reverts commit 55e06b9c45016127b8b71bbd331cddb9fe0180e1.

--- a/assets/styles/layout_general.css
+++ b/assets/styles/layout_general.css
@@ -199,9 +199,7 @@
 /* ============================================== */
 
     .anchor{
-        position: relative;
-        top: calc((var(--height-header) + 16px) * -1);
-
+        margin-bottom: var(--space-4);
     }
     
 
